force-app/main/default/objects/Nomination__c/Nomination__c.object-meta.xml
<CustomObject>
    <description>Object is created to store the nominations contained three of the best employees of the consequent position</description>
    <label>Nomination</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Nomination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>