force-app/main/default/objects/Nomination__c/fields/BrokenRuleName__c.field-meta.xml
<CustomField>
    <fullName>BrokenRuleName__c</fullName>
    <description>Field is created to show a nomination rule type broken by the Nominator.</description>
    <externalId>true</externalId>
    <inlineHelpText>Field is created to show a nomination rule type broken by the Nominator.</inlineHelpText>
    <label>Broken Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>