force-app/main/default/objects/Nomination__c/fields/NominationCategoryId__c.field-meta.xml
<CustomField>
    <fullName>NominationCategoryId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Nomination Category for the Nominee.</description>
    <inlineHelpText>Select the existed Nomination Category for the Nominee or create a new one.</inlineHelpText>
    <label>Nomination Category Id</label>
    <referenceTo>NominationCategory__c</referenceTo>
    <relationshipLabel>Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>