force-app/main/default/objects/Nomination__c/fields/NominatorId__c.field-meta.xml
<CustomField>
    <fullName>NominatorId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is created to represent the person who nominates the Nominee.</description>
    <inlineHelpText>This field is created to represent the person who nominates the Nominee.</inlineHelpText>
    <label>Nominator Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>About My Nominee</relationshipLabel>
    <relationshipName>AboutMyNominee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>