force-app/main/default/objects/Nomination__c/fields/NomineeId__c.field-meta.xml
<CustomField>
    <fullName>NomineeId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field is created to point a person who is nominated by the Nominator Id.</description>
    <inlineHelpText>Choice a person for The Nomination.</inlineHelpText>
    <label>Nominee Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>About Me</relationshipLabel>
    <relationshipName>AboutMe</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>