force-app/main/default/objects/Nomination__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <description>About your Nominee.</description>
    <inlineHelpText>Why do you nominate this person?</inlineHelpText>
    <label>Review</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>