force-app/main/default/objects/Nomination__c/fields/StatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>StatusIndicator__c</fullName>
    <description>Field is created to image status of approval process.</description>
    <formula>IF( ISPICKVAL( Status__c , &apos;Approved&apos;) , IMAGE(&quot;/resource/StatusImages/thumbs-up.png&quot;, &quot;Accepted&quot;, 20, 20),
IF ( ISPICKVAL( Status__c , &apos;Rejected&apos;), IMAGE(&quot;/resource/StatusImages/thumbs-down.png&quot;, &quot;Rejected&quot;, 20, 20),
IMAGE(&quot;/resource/StatusImages/draft.png&quot;, &quot;In Approval&quot;, 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is created to image status of approval process.</inlineHelpText>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>