force-app/main/default/objects/Nomination__c/validationRules/NomineeNotNominator.validationRule-meta.xml
<ValidationRule>
    <fullName>NomineeNotNominator</fullName>
    <active>true</active>
    <description>You cannot nominate yourself.</description>
    <errorConditionFormula>NominatorId__c  =  NomineeId__c</errorConditionFormula>
    <errorDisplayField>NomineeId__c</errorDisplayField>
    <errorMessage>You cannot nominate yourself.</errorMessage>
</ValidationRule>