force-app/main/default/objects/Nomination__c/validationRules/ReviewLength.validationRule-meta.xml
<ValidationRule>
    <fullName>ReviewLength</fullName>
    <active>true</active>
    <description>Rule is created to restrict offers without or with very short review. Review length should be more than 30 characters.</description>
    <errorConditionFormula>LEN( Review__c ) &lt;=  30</errorConditionFormula>
    <errorDisplayField>Review__c</errorDisplayField>
    <errorMessage>Review length should be more than 30 characters.</errorMessage>
</ValidationRule>