force-app/main/default/objects/Nomination__c/validationRules/ThreeNomineesPerNomination.validationRule-meta.xml
<ValidationRule>
    <fullName>ThreeNomineesPerNomination</fullName>
    <active>true</active>
    <description>You have chosen more than three Nominees in the same Nomination Category.</description>
    <errorConditionFormula>BrokenRuleName__c = &quot;ThreeNomineesPerNomination&quot;</errorConditionFormula>
    <errorMessage>You choose more than three Nominees in the same Nomination Category.</errorMessage>
</ValidationRule>