force-app/main/default/objects/Nomination__c/validationRules/TwiceNomineePerNomination.validationRule-meta.xml
<ValidationRule>
    <fullName>TwiceNomineePerNomination</fullName>
    <active>true</active>
    <description>You cannot nominate the Nominee in the Nomination Category twice.</description>
    <errorConditionFormula>BrokenRuleName__c  = &quot;TwiceNomineePerNomination&quot;</errorConditionFormula>
    <errorDisplayField>NomineeId__c</errorDisplayField>
    <errorMessage>You cannot nominate the Nominee in the Nomination Category twice.</errorMessage>
</ValidationRule>